--- a/index.html
+++ b/index.html
@@ -113,9 +113,6 @@
                         <a class="page-scroll" href="#trainhackers">TrainHackers</a>
                     </li>-->
                     <li>
-                        <a class="page-scroll" href="#prizes">Prizes</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#winner">2015 Winners</a>
                     </li>
                     <li>
@@ -395,14 +392,7 @@
         </div>
     </section> -->
 
-    <section id="prizes" class="container content-section text-center">
-        <div id="type-form-parent" class="row">
-            <img width="100%" src="img/index/prizes.png" />
-        </div>
-    </section>
-
-
-    <!-- <section id="team" class="container-wide content-section text-center">
+    <section id="team" class="container-wide content-section text-center">
         <div class="row">
             <div class="col-sm-12">
                 <h2>Team</h2>
@@ -468,7 +458,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-sm-12">
                 <div class="organizer col-md-3 col-sm-4">
                     <a href="https://www.linkedin.com/profile/view?id=75914299"><img src="img/index/ian-small.jpg" alt="Ian Graham"/></a>
@@ -533,12 +523,17 @@
                     </ul>
                 </div>
             </div>
+        </div> -->
+    </section>
+
+    <br><br><br><br><br><br> 
+
+    <section id="prizes" class="container content-section text-center">
+        <div id="type-form-parent" class="row">
+            <img width="100%" src="img/index/prizes.png" />
         </div>
     </section>
 
-    <br><br><br><br><br><br> -->
-
-    <!-- About Section -->
 
     <div id="winners" class="container-wide content-section text-center" style="padding-top: 0px">
         <div class="prize-header-container">
@@ -616,14 +611,14 @@
     </div>
 </div>
 
-    <section id="journey" class="container-wide content-section text-center">
+    <!--<section id="journey" class="container-wide content-section text-center">
         <div class="storify" style="width: 110%;">
             <iframe frameborder="no" height="1000" style="width: 100%;" src="https://storify.com/public/templates/slideshow/index.html?src=//storify.com/njharland/inside-the-hacktrain#1"></iframe>
 
             <noscript>[<a href="//storify.com/njharland/inside-the-hacktrain" target="_blank">View the story "HackTrain: 40 hackers, 4 cities, 56
             hours to #HackTheRails " on Storify</a>]</noscript>
         </div>
-    </div>
+    </div>-->
 
 
     <!-- <div id="map"></div> -->
