added spelling changes

--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
             </h2>
         </div>
         <div class="col-md-4" style="font-size: 1.3em; text-align: left; padding-top: 10px;">
-            <i>
                 The world's largest initiative to <a href="https://twitter.com/search?q=%23HacktheRails&src=tyah">#HackTheRails</a>! An unforgettable experience where the world's most skillful programmers, designers and entrepreneurs will be selected to create unique apps, websites and software whilst on an immersive first class journey across top technology ecosystems in Europe!
-            </i>
             <br><br>
             <b>
                 <b>Nothing can stop innovation when travelling at 200km/h.</b>
@@ -194,10 +192,10 @@
 
             <div class="col-lg-8 col-lg-offset-2">
                 <p>
-                    What makes the <a href="2015.html">HackTrain hackathon</a> unique is the thorough focus for impact. The HackTrain brings together the world's most driven, skilled, and bold individuals in the global startup ecosystem, and allows them to work on high-impact problems in the industry - side by side with the world's largest industry leaders. This ignites creativity, and allows our Trainhackers to conceive, build and launch scalable startups that provide scalable long-term solutions that have the potential to grow and have and truly have an impact in the world. 
+                    What makes the <a href="2015.html">HackTrain hackathon</a> unique is the thorough focus on impact. The HackTrain brings together the world's most driven, skilled, and bold individuals in the global startup ecosystem, and allows them to work on high-impact problems in the industry - side by side with the world's largest industry leaders. This ignites creativity, and allows our Trainhackers to conceive, build and launch scalable startups that provide scalable long-term solutions that have the potential to grow and truly have an impact on the world. 
                 </p>
                 <p>
-                    Crazy? Definitely! Impossible? Not even close! HackTrain alumni have managed to build prototypes at the hackathon that reached headlines in top news, exited by selling to railway companies, obtained access as advisors to boards in railway companies, and continued growing their projects forward.
+                    Crazy? Definitely! Impossible? Not even close! HackTrain alumni have managed to build prototypes at the hackathon that reached headlines in high profile news headlines, exited by selling to railway companies, obtained access as advisors to boards in railway companies, and continued growing their projects forward.
                 </p>
             </div>
         </div>
@@ -341,12 +339,10 @@
             </h2>
         </div>
         <div class="col-md-4" style="font-size: 1.3em; text-align: left; padding-top: 10px;">
-            <i>
                 A young technologist or innovator who has the skills, knowledge and drive to have an impact in the industry by creating unique, innovative solutions.
-            </i>
             <br><br>
             <b>
-                Trainhackers are not afraid to look at the industry in the eyes, and defy it by building cheaper, better and faster services.
+                Trainhackers are not afraid to look the industry in the eyes, and defy it by building cheaper, better and faster services.
             </b>
         </div>
     </div>
