Added smartrail logo

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="container col-sm-12">
                     <div class="col-xs-5 img-container">
                       <a href="http://smartrailworld.com">
-                        <img style="margin: auto auto" class="img-responsive" src="http://globaltransportforum.com/smart-rail-usa/files/2013/11/smart-rail-usa1.png"/>
+                        <img style="margin: auto auto" class="img-responsive" src="img/index/smart-rail-world1.png"/>
                       </a>
                     </div>
                     <div class="col-xs-5 col-xs-offset-1 img-container">
