--- a/index.html
+++ b/index.html
@@ -110,10 +110,15 @@
                         <a class="page-scroll" href="/2015.html">2015 Journey</a>
                     </li>
                     <li>
-                        <a data-toggle="modal" href="#myModal" role="button" class="btn btn-info">
+                        <a data-toggle="modal" href="#myModal" role="button">
+                          Contact us
+                        </a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#apply" role="button" class="btn btn-info">
                           Apply now
                         </a>
-                      </li><!-- 
+                     </li><!-- 
                     <li style="width: 150px; position: relative;">
                       <a href="http://bloomberg.com/RD">
                         <img style="margin: auto auto; width: 100%; position: absolute; margin-top: -10px" class="img-responsive" src="img/index/bloomberg-logo-powered.png"/>
@@ -356,8 +361,10 @@
 
 <br><br><br>
 
+<!-- Change the width and height values to suit you best -->
+<div id="apply" class="typeform-widget" data-url="https://hackpartners.typeform.com/to/pvSvMG" data-text="HackTrain 2.0" style="width:100%;height:600px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 
-<iframe style="height: 700px; width: 100%;" src="https://storify.com/public/templates/slideshow/index.html?src=//storify.com/njharland/inside-the-hacktrain#1"></iframe>
 
 
     <!-- <div id="map"></div> -->
@@ -395,6 +402,8 @@
       ga('create', 'UA-58935240-1', 'auto');
       ga('send', 'pageview');
     </script>
+
+
 
     <!-- Custom Trainhacks JavaScript -->
     <script src="js/index/index.js"></script>
