--- a/index.html
+++ b/index.html
@@ -362,8 +362,7 @@
 <br><br><br>
 
 <!-- Change the width and height values to suit you best -->
-<div id="apply" class="typeform-widget" data-url="https://hackpartners.typeform.com/to/pvSvMG" data-text="HackTrain 2.0" style="width:100%;height:600px;"></div>
-<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+    <iframe id="typeform-full"></iframe>
 
 
 
