--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="A hackathon on a train, a railway accelerator, and an innitiative to innovate the railway industry.">
+    <meta name="author" content="Hack Partners">
+    <link rel="shortcut icon" href="img/hacktrain-icon-black.png">
 
     <!-- Facebook Metatags -->
     <meta property="og:title" content="HackTrain - Hacking on Rails" />
@@ -398,8 +399,10 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-58935240-1', 'auto');
+
+      ga('create', 'UA-65616946-2', 'auto');
       ga('send', 'pageview');
+
     </script>
 
 
