remove accelerator stuff

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <li>
                         <a class="page-scroll" href="#sponsors">Partners</a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a class="page-scroll" href="/accelerator.html">Accelerator</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="/2015.html">2015 Journey</a>
                     </li>
@@ -148,9 +148,9 @@
                               <span class="network-name">Hackathon</span>
                             </a>
                             <p></p>
-                            <a  href="/accelerator.html" class="btn btn-default btn-lg"> 
+                            <!-- <a  href="/accelerator.html" class="btn btn-default btn-lg"> 
                               <span class="network-name">Accelerator</span>
-                            </a>
+                            </a> -->
                             <br>
 
                             <br>
