--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                         <br><br><br>
                         <br>
                             <!-- <a  href="#myModal" role="button"  data-toggle="modal" class="btn btn-default btn-lg">  -->
-                            <a  href="/2015.html" class="btn btn-default btn-lg"> 
+                            <!-- <a  href="/2015.html" class="btn btn-default btn-lg"> 
                               <span class="network-name">Hackathon</span>
                             </a>
-                            <p></p>
+                            <p></p> -->
                             <!-- <a  href="/accelerator.html" class="btn btn-default btn-lg"> 
                               <span class="network-name">Accelerator</span>
                             </a> -->
