--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     <br><br><br><br><br><br> 
     <br><br><br><br><br><br> 
 
-    <h1 style="text-align: center">Apply now</h1>
+    <h1 id="apply" style="text-align: center">Apply now</h1>
     <div class="row">
         <div class="col-lg-4 col-lg-offset-2">
             <h2>
