--- a/index.html
+++ b/index.html
@@ -264,19 +264,27 @@
 
     <section id="sponsors" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
-            <div class="container col-lg-8 col-lg-offset-2">
-                <h1>Partners</h1>
+            <div class="container col-md-6 col-md-offset-3">
+                <h1>Partners</h1><br>
               
                 <div class="container col-sm-12">
-                    <div class="col-xs-5 img-container">
-                      <a href="http://smartrailworld.com">
-                        <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/index/smart-rail-world1.png"/>
+                    <div class="col-xs-6 col-xs-offset-3 img-container">
+                      <a href="https://www.gov.uk/government/organisations/department-for-transport">
+                        <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/index/dft.png"/>
                       </a>
                     </div>
-                    <div class="col-xs-5 col-xs-offset-1 img-container">
-                        <a href="http://www.york.gov.uk/">
-                            <img alt="York" class="img-responsive" src="img/index/logo-york.png"/>
-                        </a>
+                    <div style="margin-top: 50px" class="col-xs-12 img-container">
+                        <div class="col-xs-6 img-container">
+                          <a href="http://smartrailworld.com">
+                            <img alt="Smart Rail" style="margin: auto auto" class="img-responsive" src="img/index/smart-rail-world1.png"/>
+                          </a>
+                        </div>
+
+                        <div class="col-xs-6 img-container">
+                            <a href="http://www.york.gov.uk/">
+                                <img alt="York" class="img-responsive" src="img/index/logo-york.png"/>
+                            </a>
+                        </div>
                     </div>
                 </div>
         </div>
