--- a/index.html
+++ b/index.html
@@ -260,7 +260,13 @@
         <br>
         for technologists to <i style="color:#219ab3;font-size:1.5em;">revolutionise</i> the industry.</h2>
     </p>
+    
+    <br>
+    <br>
 
+    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="margin-bottom: 200px;">
+        <div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="/thehacktrain/videos/vb.621526587993573/674179579394940/?type=1"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/thehacktrain/videos/674179579394940/"><a href="https://www.facebook.com/thehacktrain/videos/674179579394940/">HackTrain: Highlights!</a><p>Check out the highlights from HackTrain - Europe&#039;s first hackathon on a train! Thanks to all the awesome teams, sponsors and everyone who made this weekend special!</p>Posted by <a href="https://www.facebook.com/thehacktrain">HackTrain</a> on Friday, April 17, 2015</blockquote></div></div>
+    </div>
 
     <section id="sponsors" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
@@ -340,6 +346,15 @@
             <div class="container col-lg-8 col-lg-offset-2">
                 <h1>Hackathon Partners</h1>
               
+
+            <div class="row">
+                <p>
+                    It is an honour to partner with the very best hackathons from around the world. The HackTrain will be offering the winning teams of each of these events with HackTrain Golden Tickets!
+                </p>
+                <br>
+                <br>
+                <br>
+            </div>
             <div class="container col-sm-12">
                 <div class="col-xs-3 img-container">
                     <a alt="Hacka Global" style="width: 100%;" href="http://hackaglobal.com">
