--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                     </a>
                 </div>
                 <div class="col-xs-3 img-container">
-                    <a alt="AMEE Hacks" style="width: 100%;" href="http://talkingpeacefestival.org/">
+                    <a alt="AMEE Hacks" style="width: 100%;" href="http://www.eventbrite.co.uk/e/modhack-mining-the-deep-web-tickets-18097419870">
                         <img style="width: 100%;" src="img/hackathon-partners/mod-hack.png"/>
                     </a>
                 </div>
