moved around ht website

--- a/index.html
+++ b/index.html
@@ -95,20 +95,17 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                    <li class="hidden">
-                        <a alt="home" href="/"></a>
+                    <li>
+                        <a alt="home" href="http://hacktrain.com">Home</a>
                     </li>
                     <li>
-                        <a alt="about" class="page-scroll" href="#about">About</a>
+                        <a alt="partners" href="#sponsors">Partners</a>
                     </li>
                     <li>
-                        <a alt="partners" class="page-scroll" href="#sponsors">Partners</a>
+                        <a class="page-scroll" href="http://news.hacktrain.com/accelerator-2016">Accelerator</a>
                     </li>
-                    <!-- <li>
-                        <a class="page-scroll" href="/accelerator.html">Accelerator</a>
-                    </li> -->
                     <li>
-                        <a alt="2015 journey" class="page-scroll" href="/2015.html">2015 Journey</a>
+                        <a alt="2015 journey" href="/2015.html">2015 Journey</a>
                     </li>
                     <li>
                         <a alt="contact us" data-toggle="modal" href="#myModal" role="button">
@@ -116,7 +113,7 @@
                         </a>
                     </li>
                     <li>
-                        <a alt="apply now" class="page-scroll" href="#apply" role="button" class="btn btn-info">
+                        <a alt="apply now" class="btn btn-default" href="https://hackpartners.typeform.com/to/pvSvMG" role="button" class="btn btn-info">
                           Apply now
                         </a>
                      </li><!-- 
@@ -398,7 +395,12 @@
     <br><br><br><br><br><br> 
     <br><br><br><br><br><br> 
 
-    <h1 id="apply" style="text-align: center">Apply now</h1>
+    <div style="
+    width:  100%;
+    text-align: center;">      
+        <a id="apply" class="btn btn-default" style="font-size: 50px; text-align: center; margin: auto auto" href="https://hackpartners.typeform.com/to/pvSvMG">Apply Now</a>
+    </div>
+    <br><br>
     <div class="row">
         <div class="col-lg-4 col-lg-offset-2">
             <h2>
@@ -422,13 +424,7 @@
     </div>
 
 <br><br><br>
-
-<!-- Change the width and height values to suit you best -->
-    <iframe id="typeform-full"></iframe>
-
-
-
-    <!-- <div id="map"></div> -->
+    
 
     <script src="js/external/jquery.js"></script>
 
