--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <a class="page-scroll" href="http://news.hacktrain.com/accelerator-2016">Accelerator</a>
                     </li>
                     <li>
-                        <a alt="2015 journey" href="/2015.html">2015 Journey</a>
+                        <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
                         <a alt="contact us" data-toggle="modal" href="#myModal" role="button">
@@ -424,7 +424,8 @@
     </div>
 
 <br><br><br>
-    
+<br><br><br>
+<br><br><br>
 
     <script src="js/external/jquery.js"></script>
 
