--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <a alt="partners" href="#sponsors">Partners</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://news.hacktrain.com/accelerator-2016">Accelerator</a>
+                        <a class="page-scroll" href="http://hacktrain.com/accelerator.html">Accelerator</a>
                     </li>
                     <li>
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
