--- a/index.html
+++ b/index.html
@@ -395,8 +395,13 @@
                     </a>
                 </div>
                 <div class="col-xs-3 img-container">
-                    <a alt="AMEE Hacks" style="width: 100%;" href="http://hackgeny.com/">
+                    <a alt="HackGenY" style="width: 100%;" href="http://hackgeny.com/">
                         <img style="width: 100%;" src="http://hackgeny.com/img/logo_top.png"/>
+                    </a>
+                </div>
+                <div class="col-xs-3 img-container">
+                    <a alt="Hipsters Hackers Hustlers" style="width: 100%;" href="http://h-h-h.co/">
+                        <img style="width: 100%;" src="img/index/hhh.png"/>
                     </a>
                 </div>
             </div>
