--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
                     </li>
                     <li>
-                        <a alt="contact us" data-toggle="modal" href="#myModal" role="button">
+                        <a alt="contact us" data-toggle="modal" href="mailito:hello@hackpartners.com" role="button">
                           Contact us
                         </a>
                     </li>
