--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
                         <a alt="home" href="http://hacktrain.com">Home</a>
                     </li>
                     <li>
-                        <a alt="partners" href="#sponsors">Partners</a>
+                        <a alt="sponsors" href="#sponsor">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://hacktrain.com/accelerator.html">Accelerator</a>
+                        <a class="page-scroll" href="http://accelerator.hacktrain.com">Accelerator</a>
                     </li>
                     <li>
                         <a alt="HackTrain News" href="http://news.hacktrain.com">News</a>
@@ -264,7 +264,7 @@
         <div id="fb-root"></div><script>(function(d, s, id) {  var js, fjs = d.getElementsByTagName(s)[0];  if (d.getElementById(id)) return;  js = d.createElement(s); js.id = id;  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";  fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script><div class="fb-video" data-allowfullscreen="1" data-href="/thehacktrain/videos/vb.621526587993573/674179579394940/?type=1"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/thehacktrain/videos/674179579394940/"><a href="https://www.facebook.com/thehacktrain/videos/674179579394940/">HackTrain: Highlights!</a><p>Check out the highlights from HackTrain - Europe&#039;s first hackathon on a train! Thanks to all the awesome teams, sponsors and everyone who made this weekend special!</p>Posted by <a href="https://www.facebook.com/thehacktrain">HackTrain</a> on Friday, April 17, 2015</blockquote></div></div>
     </div>
 
-    <section id="sponsors" class="content-section text-center">
+    <section id="sponsor" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
                 <h1>Sponsors</h1>
