--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                         <a alt="home" href="http://hacktrain.com">Home</a>
                     </li>
                     <li>
+                        <a alt="HackTrain News" href="http://news.hacktrain.com/hacktrain2-faq/">F.A.Q.</a>
+                    </li>
+                    <li>
                         <a alt="sponsors" href="#sponsor">Sponsors</a>
                     </li>
                     <li>
