--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <meta property="og:title" content="HackTrain - Hacking on Rails" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
-    <meta property="og:image:width" content="470"/>
-    <meta property="og:image:height" content="246"/>
     <meta property="og:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March." />
+    <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
     <!-- Twitter Metatags -->
     <meta name="twitter:card" content="HackTrain">
     <meta name="twitter:site" content="@TheHackTrain">
     <meta name="twitter:title" content="HackTrain - Hacking on Rails">
     <meta name="twitter:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March.">
+    <meta name="twitter:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
 
