--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link rel="shortcut icon" href="img/index/hacktrain-icon-black.png">
 
     <!-- Facebook Metatags -->
-    <meta property="og:title" content="HackTrain - Hacking on Rails" />
+    <meta property="og:title" content="HackTrain - A hackathon on a train." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March." />
+    <meta property="og:description" content="Apply now at apply.hacktrain.com" />
     <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
     <!-- Twitter Metatags -->
     <meta name="twitter:card" content="HackTrain">
     <meta name="twitter:site" content="@TheHackTrain">
-    <meta name="twitter:title" content="HackTrain - Hacking on Rails">
-    <meta name="twitter:description" content="HackTrain is the first ever train hackathon in Europe! Apply for the craziest hackathon ever departing 27th March.">
+    <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
+    <meta name="twitter:description" content="Apply now at apply.hacktrain.com.">
     <meta name="twitter:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
