--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <meta property="og:url" content="http://hacktrain.com" />
     <meta property="og:description" content="Apply now at apply.hacktrain.com" />
     <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="470" />
+    <meta property="og:image:height" content="246" />
     <!-- Twitter Metatags -->
     <meta name="twitter:card" content="HackTrain">
     <meta name="twitter:site" content="@TheHackTrain">
