--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="shortcut icon" href="img/index/hacktrain-icon-black.png">
 
     <!-- Facebook Metatags -->
-    <meta property="og:title" content="HackTrain - A hackathon on a train." />
+    <meta property="og:title" content="HackTrain - Apply at apply." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
-    <meta property="og:description" content="Apply now at apply.hacktrain.com" />
+    <meta property="og:description" content="Click here to apply to the world's craziest, most awesome hackathon." />
     <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="470" />
