--- a/index.html
+++ b/index.html
@@ -523,6 +523,76 @@
     </section>
 
 
+    <section id="team" class="container-wide content-section text-center">
+        <div class="row">
+            <div class="col-sm-12">
+                <h2>Team</h2>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.linkedin.com/in/rivertam"><img src="img/index/river.jpg" alt="River Tam"/></a>
+                    <h2 itemprop="name">River Tamoor Baig<br></h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Co-founder at HackTrain.</li>
+                        <li>Ran accelerator programmes.</li>
+                        <li>Launched Europe's first invitation only hackathon and was Conductor of StartupBus UK 2014</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:river@dotforge.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">river@hackpartners.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="http://www.linkedin.com/pub/alejandro-saucedo/41/6b3/4b0"><img src="img/index/alejandro.jpg" alt="Alejandro Saucedo"/></a>
+                    <h2 itemprop="name">Alejandro Saucedo</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Has organized 30+ hackathons around the world.</li>
+                        <li>Co-founder at HackTrain.</li>
+                        <li>Had the opportunity to discss entrepreneurial matters with PM David Cameron, and later on with the Duke of York.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:axsauze@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">alejandro@hackpartners.com</span></a>
+                        </li>
+                    </ul>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href=""><img src="https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/11058758_10152873679886608_4415771636014368774_o.jpg" alt="Ed Maclean"/></a>
+                    <h2 itemprop="name">Ed Maclean</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>Organized a conference with hundredths of people.</li>
+                        <li>Managed multiple international events.</li>
+                        <li>Sales at Hack Partners.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">ed@hackpartners.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="organizer col-md-3 col-sm-4">
+                    <a href="https://www.facebook.com/sally.kuok?fref=ts"><img src="img/index/sally.jpg" alt="Sally Kuok"/></a>
+                    <h2 itemprop="name">Sally Kuok</h2>
+                    <ul itemprop="description" class="organizer-description">
+                        <li>EMEA Marketing at Hack Partners.</li>
+                        <li>Winner of the Startup Weekend Sheffield.</li>
+                        <li>AIESEC Leader.</li>
+                    </ul>
+
+                    <ul class="banner-social-buttons col-sm-12">
+                        <li class="col-sm-12">
+                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">sally@hackpartners.com</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="js/external/jquery.js"></script>
 
     <script src="js/external/bootstrap.min.js"></script>
