--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://hacktrain.com" />
     <meta property="og:description" content="Click here to apply to the world's craziest, most awesome hackathon." />
-    <meta property="og:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
+    <meta property="og:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1500" />
@@ -24,7 +24,7 @@
     <meta name="twitter:site" content="@TheHackTrain">
     <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
     <meta name="twitter:description" content="Apply now at apply.hacktrain.com.">
-    <meta name="twitter:image" content="http://hacktrain.com/img/index/facebook-banner.jpg" />
+    <meta name="twitter:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
 
     <title>HackTrain - Hack the Rails</title>
 
