--- a/index.html
+++ b/index.html
@@ -311,6 +311,17 @@
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div> -->
+
+                <div alt="national rail" class="col-xs-4 col-xs-offset-2 img-container">
+                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/logo-nomad.png"/>
+                    </a>
+                </div>
+                <div alt="national rail" class="col-xs-2 col-xs-offset-1 img-container">
+                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
