--- a/index.html
+++ b/index.html
@@ -312,9 +312,14 @@
                     </a>
                 </div> -->
 
-                <div alt="national rail" class="col-xs-4 col-xs-offset-2 img-container">
+                <div alt="national rail" class="col-xs-3 col-xs-offset-1 img-container">
                     <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
+                    </a>
+                </div>
+                <div alt="national rail" class="col-xs-3 col-xs-offset-1 img-container">
+                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/logo-yrp.png"/>
                     </a>
                 </div>
                 <div alt="national rail" class="col-xs-2 col-xs-offset-1 img-container">
@@ -565,7 +570,7 @@
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:river@dotforge.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">river@hackpartners.com</span></a>
+                            <a href="mailito:river@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">river@hackpartners.com</span></a>
                         </li>
                     </ul>
                 </div>
@@ -580,7 +585,7 @@
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:axsauze@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">alejandro@hackpartners.com</span></a>
+                            <a href="mailito:alejandro@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">alejandro@hackpartners.com</span></a>
                         </li>
                     </ul>
                     </ul>
@@ -596,7 +601,7 @@
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">ed@hackpartners.com</span></a>
+                            <a href="mailito:ed@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">ed@hackpartners.com</span></a>
                         </li>
                     </ul>
                 </div>
@@ -611,7 +616,7 @@
 
                     <ul class="banner-social-buttons col-sm-12">
                         <li class="col-sm-12">
-                            <a href="mailito:kikyou56k@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">sally@hackpartners.com</span></a>
+                            <a href="mailito:sally@hackpartners.com" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">sally@hackpartners.com</span></a>
                         </li>
                     </ul>
                 </div>
