added bloomberg logo

--- a/index.html
+++ b/index.html
@@ -311,20 +311,26 @@
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div> -->
+                <div style="clear: both"></div>
 
-                <div alt="national rail" class="col-xs-3 col-xs-offset-1 img-container">
+                <div alt="national rail" class="col-xs-3 img-container">
                     <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-3 col-xs-offset-1 img-container">
+                <div alt="national rail" class="col-xs-3  img-container">
                     <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-yrp.png"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-2 col-xs-offset-1 img-container">
+                <div alt="national rail" class="col-xs-2 img-container">
                     <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
+                    </a>
+                </div>
+                <div alt="national rail" class="col-xs-3 img-container">
+                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
                     </a>
                 </div>
             </div>
