adding prizes for hacktrian and schedule

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <hr/>
                 <br>
                 <br>
-                
+
                 <div class="container col-sm-12">
                     <div class="col-xs-6 col-xs-offset-3 img-container">
                       <a href="https://www.gov.uk/government/organisations/department-for-transport">
@@ -530,6 +530,10 @@
 
     <section id="schedule" role="tabpanel">
 
+        <h1>Schedule</h1>
+        <hr/>
+        <center>
+
       <!-- Nav tabs -->
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active col-sm-4 col-xs-12"><a href="#fri-sch" aria-controls="fri-sch" role="tab" data-toggle="tab">Day 1</a></li>
@@ -614,7 +618,15 @@
                     </div>
                 </div>
 
-                <h2>Routes coming soon... </h2>
+                <div class="row container col-lg-12">
+                    <div class="col-md-3">
+                        <p class="time">18:00pm ++</p>
+                    </div>
+                    <div class="col-md-9">
+                        <p class="title">HackTrain Routes</p>
+                        <p class="subtitle">Detailed routes coming soon...</p>
+                    </div>
+                </div>
 
             </section>
         </div>
