adding prizes for hacktrian and schedule

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                     <ul itemprop="description" class="organizer-description">
                         <li>Has organized 30+ hackathons around the world.</li>
                         <li>Co-founder at HackTrain.</li>
-                        <li>Had the opportunity to discss entrepreneurial matters with PM David Cameron, and later on with the Duke of York.</li>
+                        <li>Had the opportunity to discuss entrepreneurial matters with PM David Cameron, and later on with the Duke of York.</li>
                     </ul>
 
                     <ul class="banner-social-buttons col-sm-12">
@@ -820,7 +820,7 @@
                     <a href=""><img src="https://scontent-lhr3-1.xx.fbcdn.net/hphotos-xpa1/t31.0-8/11058758_10152873679886608_4415771636014368774_o.jpg" alt="Ed Maclean"/></a>
                     <h2 itemprop="name">Ed Maclean</h2>
                     <ul itemprop="description" class="organizer-description">
-                        <li>Organized a conference with hundredths of people.</li>
+                        <li>Organized a conference with hundreds of people.</li>
                         <li>Managed multiple international events.</li>
                         <li>Sales at Hack Partners.</li>
                     </ul>
