--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1500" />
     <!-- Twitter Metatags -->
-    <meta name="twitter:card" content="HackTrain">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@TheHackTrain">
+    <meta name="twitter:creator" content="@HackPartners">
     <meta name="twitter:title" content="HackTrain - A hackathon on a train.">
     <meta name="twitter:description" content="Apply now at apply.hacktrain.com.">
     <meta name="twitter:image" content="http://hacktrain.com/img/index/fbanner.jpg" />
