--- a/index.html
+++ b/index.html
@@ -370,6 +370,11 @@
                         <img style="width: 100%;" src="https://img4.wakelet.com/images/3/T/G/MrHQXRj.jpg"/>
                     </a>
                 </div>
+                <div alt="national rail" class="col-xs-3 img-container">
+                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -538,7 +543,7 @@
     </section>
 
 
-<!-- 
+
     <section id="schedule" role="tabpanel">
 
         <h1>Schedule</h1>
