--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 
 
 
-    <section id="schedule" role="tabpanel">
+    <!--<section id="schedule" role="tabpanel">
 
         <h1>Schedule</h1>
         <hr/>
