--- a/index.html
+++ b/index.html
@@ -798,6 +798,11 @@
                         <img style="width: 80%;" src="https://2014f.jacobshack.com/images/2015e852.jacobsHack_hq_inverted.png"/>
                     </a>
                 </div>
+                <div class="col-xs-3 img-container">
+                    <a alt="TechHub" style="width: 100%;" href="https://https://www.techhub.com//">
+                        <img style="width: 80%;" src="img/hackathon-partners/techhub.png"/>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
