--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                     </a>
                 </div>
                 <div class="col-xs-3 img-container">
-                    <a alt="TechHub" style="width: 100%;" href="https://https://www.techhub.com//">
+                    <a alt="TechHub" style="width: 100%;" href="https://london.techhub.com/events/">
                         <img style="width: 80%;" src="img/hackathon-partners/techhub.png"/>
                     </a>
                 </div>
