--- a/index.html
+++ b/index.html
@@ -313,45 +313,35 @@
                 <hr/>
               
             <div class="container col-sm-12">
-                <!-- <div class="col-xs-3 img-container">
-                  <a alt="bloomberg" href="http://bloomberg.com/RD">
-                    <img alt="bloomberg" style="margin: auto auto" class="img-responsive" src="img/index/bloomberg-logo.png"/>
-                  </a>
-                </div>
-                <div alt="accenture" class="col-xs-3 img-container">
-                    <a alt="accenture" style="width: 100%;" href="http://www.accenture.com/">
-                        <img style="width: 100%; margin: auto auto;" src="img/index/accenture.png"/>
+                
+                <div style="clear: both; margin-bottom: 100px"></div>
+
+                <!-- HEADLINE -->
+                <div alt="SilverRail Technologies" class="col-xs-12 img-container">
+                    <a alt="SilverRail Technologies" style="width: 100%;" href="http://silverrailtech.com/">
+                        <img style="width: 100%;" src="img/sponsors/logo-silverrail.png"/>
                     </a>
                 </div>
-                <div alt="accenture" class="col-xs-3 img-container">
-                    <a alt="accenture" style="width: 100%;" href="http://www.thetrainline.co.uk/">
-                        <img style="width: 100%; margin: auto auto;" src="img/index/logo-ttl.png"/>
-                    </a>
-                </div>
-                <div alt="national rail museum" class="col-xs-3 img-container">
-                    <a alt="national rail museum" style="width: 100%;" href="http://www.nationalrailmuseum.co.uk/">
-                        <img style="width: 50%;" src="img/index/nrmwhite.png"/>
-                    </a>
-                </div>
-                <div alt="netowrk rail" class="col-xs-6 col-xs-offset-3 img-container">
-                    <a alt="network rail" style="width: 100%;" href="http://www.networkrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/logo-networkrail.png"/>
-                    </a>
-                </div> -->
-                <div alt="national rail" class="col-xs-6 col-xs-offset-3 img-container">
-                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/logo-nre.png"/>
-                    </a>
-                </div>
-                <!-- <div alt="nomad digital" class="col-xs-3 img-container">
-                    <a alt="nomad digital" style="width: 100%;" href="http://nomad-digital.com/">
-                        <img style="width: 100%;" src="img/index/logo-nomad.png"/>
-                    </a>
-                </div> -->
+
                 <div style="clear: both; margin-bottom: 30px"></div>
 
-                <div alt="national rail" class="col-xs-3 img-container">
-                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                <!-- GOLD -->
+                <div alt="Trailine" class="col-xs-5 col-xs-offset-1 img-container">
+                    <a alt="Trailine" style="width: 100%;" href="http://trainline.com">
+                        <img style="width: 100%;" src="img/sponsors/logo-trainline.png"/>
+                    </a>
+                </div>
+                <div alt="National Rail Enquiries" class="col-xs-5 img-container">
+                    <a alt="National Rail Enquiries" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/sponsors/logo-nre.png"/>
+                    </a>
+                </div>
+
+                <div style="clear: both; margin-bottom: 30px"></div>
+
+                <!-- SILVER -->
+                <div alt="Nomad Digital" class="col-xs-3 img-container">
+                    <a alt="Nomad Digital" style="width: 100%;" href="http://nomad-digital.com/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div>
@@ -360,19 +350,24 @@
                         <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-3 img-container">
-                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                <div alt="Bloomberg" class="col-xs-3 img-container">
+                    <a alt="Bloomberg" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-3 img-container">
+                <div alt="Tech North" class="col-xs-3 img-container">
                     <a alt="Tech North" style="width: 100%;" href="http://technorthhq.com/">
                         <img style="width: 100%;" src="https://img4.wakelet.com/images/3/T/G/MrHQXRj.jpg"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-3 img-container">
-                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                <div alt="Cogitare" class="col-xs-3 img-container">
+                    <a alt="Cogitare" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
+                    </a>
+                </div>
+                <div alt="Chiltern Railways" class="col-xs-3 img-container">
+                    <a alt="Chiltern Railways" style="width: 100%;" href="http://www.chilternrailways.co.uk/">
+                        <img style="width: 100%;" src="img/sponsors/logo-chiltern-railways.png"/>
                     </a>
                 </div>
             </div>
