moved sponsor logos

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
                 <!-- HEADLINE -->
                 <div alt="SilverRail Technologies" class="col-xs-12 img-container">
-                    <a alt="SilverRail Technologies" style="width: 100%;" href="http://silverrailtech.com/">
+                    <a alt="SilverRail Technologies" target="_blank" style="width: 100%;" href="http://silverrailtech.com/">
                         <img style="width: 100%;" src="img/sponsors/logo-silverrail.png"/>
                     </a>
                 </div>
@@ -327,12 +327,12 @@
 
                 <!-- GOLD -->
                 <div alt="Trailine" class="col-xs-5 col-xs-offset-1 img-container">
-                    <a alt="Trailine" style="width: 100%;" href="http://trainline.com">
+                    <a alt="Trailine" style="width: 100%;" href="http://trainline.com" target="_blank">
                         <img style="width: 100%;" src="img/sponsors/logo-trainline.png"/>
                     </a>
                 </div>
                 <div alt="National Rail Enquiries" class="col-xs-5 img-container">
-                    <a alt="National Rail Enquiries" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                    <a alt="National Rail Enquiries" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/sponsors/logo-nre.png"/>
                     </a>
                 </div>
@@ -341,33 +341,33 @@
 
                 <!-- SILVER -->
                 <div alt="Nomad Digital" class="col-xs-3 img-container">
-                    <a alt="Nomad Digital" style="width: 100%;" href="http://nomad-digital.com/">
+                    <a alt="Nomad Digital" target="_blank" style="width: 100%;" href="http://nomad-digital.com/">
                         <img style="width: 100%;" src="img/index/logo-nomad.png"/>
                     </a>
                 </div>
-                <div alt="national rail" class="col-xs-2 img-container">
-                    <a alt="national rail" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
-                    </a>
-                </div>
-                <div alt="Bloomberg" class="col-xs-3 img-container">
-                    <a alt="Bloomberg" style="width: 100%;" href="http://www.nationalrail.co.uk/">
-                        <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
-                    </a>
-                </div>
-                <div alt="Tech North" class="col-xs-3 img-container">
-                    <a alt="Tech North" style="width: 100%;" href="http://technorthhq.com/">
-                        <img style="width: 100%;" src="https://img4.wakelet.com/images/3/T/G/MrHQXRj.jpg"/>
-                    </a>
-                </div>
                 <div alt="Cogitare" class="col-xs-3 img-container">
-                    <a alt="Cogitare" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                    <a alt="Cogitare" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-cogitare.png"/>
                     </a>
                 </div>
                 <div alt="Chiltern Railways" class="col-xs-3 img-container">
-                    <a alt="Chiltern Railways" style="width: 100%;" href="http://www.chilternrailways.co.uk/">
+                    <a alt="Chiltern Railways" target="_blank" style="width: 100%;" href="http://www.chilternrailways.co.uk/">
                         <img style="width: 100%;" src="img/sponsors/logo-chiltern-railways.png"/>
+                    </a>
+                </div>
+                <div alt="Bloomberg" class="col-xs-3 img-container">
+                    <a alt="Bloomberg" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/logo-bloomberg.png"/>
+                    </a>
+                </div>
+                <div alt="Tech North" class="col-xs-3 col-xs-offset-3 img-container">
+                    <a alt="Tech North" target="_blank" style="width: 100%;" href="http://technorthhq.com/">
+                        <img style="width: 100%;" src="https://img4.wakelet.com/images/3/T/G/MrHQXRj.jpg"/>
+                    </a>
+                </div>
+                <div alt="national railway museum" class="col-xs-2 img-container">
+                    <a alt="national railway museum" target="_blank" style="width: 100%;" href="http://www.nationalrail.co.uk/">
+                        <img style="width: 100%;" src="img/index/nationalrailmuseum.png"/>
                     </a>
                 </div>
             </div>
