--- a/index.html
+++ b/index.html
@@ -382,23 +382,18 @@
                 <hr/>
                 <br><br>
             <div class="container col-sm-12">
-                <div class="col-xs-3 img-container">
+                <div class="col-xs-4 img-container">
                   <a alt="Great Western Rail" href="https://www.gwr.com/">
                     <img alt="Great Western Rail" style="width: 80%;margin: auto auto" class="img-responsive" src="img/transport-sponsors/gwr-white.png"/>
                   </a>
                 </div>
-                <div alt="accenture" class="col-xs-3 img-container">
-                    <a alt="accenture" style="width: 100%;" href="http://www.eastmidlandstrains.co.uk/">
-                        <img style="width: 100%; margin: auto auto;" src="img/transport-sponsors/emt.png"/>
-                    </a>
-                </div>
-                <div alt="accenture" class="col-xs-3 img-container">
-                    <a alt="accenture" style="width: 100%;" href="https://www.virgintrainseastcoast.com/">
+                <div alt="virgin trains east coast" class="col-xs-4 img-container">
+                    <a alt="virgin trains east coast" style="width: 100%;" href="https://www.virgintrainseastcoast.com/">
                         <img style="width: 70%; margin: auto auto;" src="img/transport-sponsors/vtec.png"/>
                     </a>
                 </div>
-                <div alt="national rail museum" class="col-xs-3 img-container">
-                    <a alt="national rail museum" style="width: 100%;" href="http://www.southwesttrains.co.uk/">
+                <div alt="south West Trains" class="col-xs-4 img-container">
+                    <a alt="south West Trains" style="width: 100%;" href="http://www.southwesttrains.co.uk/">
                         <img style="width: 90%;" src="img/transport-sponsors/sw.png"/>
                     </a>
                 </div>
