--- a/index.html
+++ b/index.html
@@ -306,6 +306,43 @@
         </div>
     </div>
 
+    <br><br><br><br><br><br> 
+    <br><br><br><br><br><br> 
+
+
+    <section name="speakers" id="speakers">
+        <div class="row" id="prizes-content">
+            <div class="col-lg-8 col-lg-offset-2 columns">
+                <h1 class="text-center">Keynote Speakers</h1>
+                <hr/>
+                <center>
+                
+                <div class="row main">
+
+                    <div class="col-sm-3">
+                        <img style="width:100%;" src="img/index/cp.jpg"/>
+                    </div>
+                    <div class="speaker-description col-sm-9">
+                        <h2>Claire Perry</h2>
+                        <h3>Minister for Transport</h3>
+                        <p>
+                            Claire Perry was appointed Parliamentary Under Secretary of State at the Department for Transport on 15 July 2014 and again in May 2015. She was elected Conservative MP for Devizes in 2010.
+                        </p>
+                        <p>
+                            In 2007 Claire worked an adviser to George Osborne before being elected as the MP for the Devizes constituency in central Wiltshire in May 2010. Highlights of her political career include:
+
+                            Member of the Justice. Select Committee from 2010 to 2011.
+                            Parliamentary Private Secretary to the Secretary of State for Defence, from 2011 to 2013.
+                            Special Advisor to the Prime Minister on preventing the sexualisation and commercialisation of children.
+                            Government Whip in 2013 and in 2014.
+                        </p>
+                    </div>
+                
+                </center>
+            </div>
+        </div>
+    </section>
+
     <section id="sponsor" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
