--- a/index.html
+++ b/index.html
@@ -315,8 +315,6 @@
             <div class="col-lg-8 col-lg-offset-2 columns">
                 <h1 class="text-center">Keynote Speakers</h1>
                 <hr/>
-                <center>
-                
                 <div class="row main">
 
                     <div class="col-sm-3">
@@ -337,8 +335,36 @@
                             Government Whip in 2013 and in 2014.
                         </p>
                     </div>
-                
-                </center>
+                </div>
+
+                <br><br>
+                <div class="row main">
+
+                    <div class="col-sm-3">
+                        <img style="width:100%;" src="img/index/gerard.jpeg"/>
+                    </div>
+                    <div class="speaker-description col-sm-9">
+                        <h2>Gerard Grech</h2>
+                        <h3>CEO at TechCity UK</h3>
+                        <p>
+                            Head up TechCity UK, an organization set up by the UK Prime Minister, whose mission is to make London and the UK the best place in the world to start and grow a digital business by smoothing the path to success -- through:
+                            <ul style="font-size: 20px">
+                                <li>Implementing partner-led programs such as Future Fifty and the Digital Business Academy</li>
+                                <li>Informing Govt. Policy Makers and Special Advisors at No.10 Downing Street and Cabinet Office </li>
+                                <li>Promoting entrepreneurs and digital companies and forging partnerships with companies that benefit the wider ecosystem. </li>
+                            </ul>
+                        </p>
+                        <p>
+                            He is also a member of:
+                            <ul style="font-size: 20px">
+                                <li>The UK Government's Digital Economy Council (focused on growth and development) </li>
+                                <li>Greater London Authority's Smart London Board (focused on smart tech for London)</li>
+                                <li>Mass Challenge's board of advisors (Boston-based with London office) </li>
+                                <li>London's Local Economic Partnership for Digital Skills (focused on digital education and skills)</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
