--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                 </div>
                 
                 <h4>Gadget Prizes</h4>
-                
+                <!-- 
                 <div class="row gadget">
                     <div class="col-lg-3 columns">
                         <img src="http://images.bwbx.io/cms/2012-07-06/0706_drone_630x420.jpg" />
@@ -553,7 +553,7 @@
                         <p class="name">Cryptotrain award</p>
                         <p class="desc">The best showcase of cybersecurity skills will obtain a {secret surprise}, plus a Kali server in the cloud.</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="row gadget">
                     <div class="col-lg-3 columns">
                         <img src="https://lh4.ggpht.com/m-paIO91U0Iy1RVLyvDLiFAOWZQ8n1t8Zf6q7ZR9ZDgJlG5FRr0Uec2OjqRKMy84TbQ=w300" />
